add header and footer and inital app methods

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,7 @@
-
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Footer Here, yo! </p>
+    <p>Content &copy;Marguerite Kennedy 2022</p>
   </div>
 </div>
 </body>
